melakukan edit profil singkat di file tentang.html

--- a/tentang.html
+++ b/tentang.html
@@ -55,12 +55,12 @@
     <!-- Slider -->
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" 
-				aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
                 aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" class="active"                aria-current="true"
-                aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" class="active"
+                aria-current="true" aria-label="Slide 3"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
                 aria-label="Slide 4"></button>
         </div>
@@ -115,13 +115,17 @@
         </div>
         <div class="row mb-5">
             <div class="col-md-6">
-                <h3 class="mb-3 judul-underline">#Lorem ipsum dolor sit amet</h3>
+                <h3 class="mb-3 judul-underline">#Profil Singkat</h3>
                 <div class="text-muted">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Et nemo nam laboriosam sequi obcaecati
-                        pariatur vel debitis accusamus harum, eaque officia modi blanditiis quam nisi? Numquam cum
-                        repellat veritatis veniam quisquam esse modi accusantium, culpa repudiandae ipsa dicta animi,
-                        hic aut illo optio laboriosam ut sint earum et beatae harum.
+                        Nama saya Ahmad Baihaqi, lahir 28 tahun yang lalu pada tanggal 30 Juni 1993 di Tulungagung Jawa
+                        Timur. Saya anak pertama dari tiga bersaudara dan sudah mempunyai istri dan satu anak laki-laki.
+                        Jenjang sekolah dari tingkat dasar sampai SMA saya di Tulungagung dan melanjutkan perguruan
+                        tinggi di Malang di UIN Maulana Malik Ibrahim pada tahun 2011. Setelah lulus strata-1, saya
+                        melanjutkan pendidikan Pascasarjana di Filkom Universutas Brawijaya Malang di bidang Multimedia,
+                        Game, dan Mobile Technology (MGM). Saat ini saya sudah lulus pendidikan Pascasarjana dan
+                        mengajar di salah satu kampus swasta di Kediri dan juga sedang mendalami pemrograman front-end,
+                        back-end, full-stack, dan mobile development.
                     </p>
                 </div>
                 <div class="row">
