Mengedit halaman tentang.html, ada yang salah

--- a/tentang.html
+++ b/tentang.html
@@ -122,9 +122,10 @@
                         Timur. Saya anak pertama dari tiga bersaudara dan sudah mempunyai istri dan satu anak laki-laki.
                         Jenjang sekolah dari tingkat dasar sampai SMA saya di Tulungagung dan melanjutkan perguruan
                         tinggi di Malang di UIN Maulana Malik Ibrahim pada tahun 2011. Setelah lulus strata-1, saya
-                        melanjutkan pendidikan Pascasarjana di Filkom Universutas Brawijaya Malang di bidang Multimedia,
+                        melanjutkan pendidikan Pascasarjana di Filkom Universitas Brawijaya Malang di bidang Multimedia,
                         Game, dan Mobile Technology (MGM). Saat ini saya sudah lulus pendidikan Pascasarjana dan
-                        mengajar di salah satu kampus swasta di Kediri dan juga sedang mendalami pemrograman front-end,
+                        mengajar di salah satu kampus swasta di Tulungagung dan Kediri dan juga sedang mendalami
+                        pemrograman front-end,
                         back-end, full-stack, dan mobile development.
                     </p>
                 </div>
